--- a/style.css
+++ b/style.css
@@ -41,6 +41,17 @@ html {
     --color-light-purple: #cf59e6;
     --color-light-blue: #6bc5f8;
 }
+::-webkit-scrollbar{
+    width: 5px;
+}
+::-webkit-scrollbar-track {
+    background: #0a0a10;
+}
+::-webkit-scrollbar-thumb{
+   background-color: #8000ff;
+    border-radius: 20px;
+
+}
 
 body{
     /* background-color:#ece7e1; */
@@ -100,15 +111,13 @@ body{
     background-image: url(src/svg/Speaker_Icon.svg);
     background-size:30%;
     background-repeat: no-repeat;
-    background-position: 5px ;
+    background-position: 8px ;
 
 }
 
 #switch:checked+#label::after {
-    transform: translate(28px);
+    transform: translate(28px) rotate(90deg);
     background: conic-gradient(skyblue,black,skyblue,black,skyblue);
-    
-    box-shadow: 0px 4px 10px rgb(15, 15, 15);
 }
 header{
     width: 100%;
@@ -319,14 +328,14 @@ header{
     display: flex;
     align-items: flex-start;
     /* font-family: fira code; */
-    color: rgb(155, 155, 155);
+    color: white;
 }
 #info-para{
     width: 50%;
     font-size: 2rem;
     font-weight: 700;
     padding-top: 30px;
-    color: rgb(155, 155, 155);
+    color: white;
     font-family: fira code;
     /* mix-blend-mode: difference; */
 }
@@ -925,26 +934,41 @@ border: none;
   list-style: none;
   font-size: 2rem;
   cursor: pointer;
-  display: none;
-
+  /* display: none; */
+  display: flex;
+transform: translate(500px);
+transition-duration: 1s;
  
 }
 .show-toggle-menu{
-    display: flex;
+    transform: translate(0);
+    transition-duration: 1s;
 }
-@keyframes dropdownlist {
-    0%{
-        transform: translate(400px);
-    }
-}
+
+
 .emptyarea{
     width: 30%;
     height: 100%;
-    background-color: rgba(2, 2, 2, 0.204);
+    /* background-color: red; */
+    
+    /* background-color: rgba(2, 2, 2, 0.204); */
+    /* backdrop-filter: blur(5px); */
     backdrop-filter: blur(5px);
+    /* background-color: red; */
+    /* background-color: blue; */
+    z-index: -1;
+    opacity: 0;
+    
 }
+.blur-class{
+    opacity: 1;
+   transition-delay: .6s;
+    transition-duration: .6s;
+    
+}
+
 .mobile-navbar-tabs-ul{
-    animation: dropdownlist .3s linear;
+    /* animation: dropdownlist .3s linear; */
     background-color: #0a0a10;
     width: 70%;
     height: 100%;
