--- a/style.css
+++ b/style.css
@@ -350,6 +350,7 @@ header{
     justify-content: center;
     animation: headshake 10s linear infinite;
     transform-origin: bottom;
+    position: relative;
 }
 @keyframes headshake {
     0%{
@@ -372,7 +373,38 @@ header{
 
 .logo-top img{
     height: 100%;
+    z-index: 2;
+    
 }
+.face{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 60%;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    z-index: 1;
+}
+.eye{
+   width: 5px;
+   height: 5px;
+   border-radius: 50%;
+   position: relative;
+   background-color: white;
+}
+.eye:after { /*pupil*/
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    left: .7px;
+    top: 0;
+    background: #000;
+    border-radius: 50%;
+    content: " ";
+  }
 .logo-bottom{
     width: 100%;
     height: 16%;
@@ -382,7 +414,6 @@ header{
 }
 .logo-bottom img{
     height: 100%;
-    
 }
 .logo:hover{
     transform: translateY(200px);
@@ -443,9 +474,8 @@ header{
     font-family: fira code;
 }
 #hello-friend:hover{
-    -webkit-animation: vibrate-1 0.3s linear infinite both;
-    animation: vibrate-1 0.3s linear infinite both;-webkit-animation: vibrate-1 0.3s linear infinite both;
-    animation: vibrate-1 0.3s linear infinite both;
+    -webkit-animation: vibrate-1 0.3s linear both;
+    animation: vibrate-1 0.3s linear both;
 }
 @-webkit-keyframes vibrate-1 {
     0% {
@@ -501,8 +531,8 @@ header{
   }
   
   #name:hover{
-    -webkit-animation: vibrate-1 0.3s linear infinite both;
-    animation: vibrate-1 0.3s linear infinite both;
+    -webkit-animation: vibrate-1 0.3s linear both;
+    animation: vibrate-1 0.3s linear both;
 }
   
 #name{
@@ -534,8 +564,8 @@ header{
     }
 }
 #work:hover{
-    -webkit-animation: vibrate-1 0.3s linear infinite both;
-    animation: vibrate-1 0.3s linear infinite both;
+    -webkit-animation: vibrate-1 0.3s linear both;
+    animation: vibrate-1 0.3s linear both;
 }
 #work{
     font-size: 8rem;
@@ -787,7 +817,8 @@ header{
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.427);
     
 }
-.language-name:before{
+
+.language-name::before{
     content: "";
     position: absolute;
     width: 30%;
@@ -796,7 +827,11 @@ header{
 	background-size: 400% 400%;
 	animation: gradientforlanguage 5s ease infinite;
     top: 0;
-
+    transition-duration: 1s;
+}
+.language-name:hover::before{
+    width: 100%;
+    transition-duration: 1s;
 }
 @keyframes gradientforlanguage {
 	0% {
