--- a/style.css
+++ b/style.css
@@ -385,17 +385,25 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 7px;
+    gap: 4px;
     z-index: 1;
 }
 .eye{
-   width: 5px;
-   height: 5px;
+   width: 8px;
+   height: 7px;
    border-radius: 50%;
-   position: relative;
+   display: flex;
+   align-items: center;
+   justify-content: center;
    background-color: white;
 }
-.eye:after { /*pupil*/
+.pupil{
+    width:4px;
+    height:4px;
+    background: #000;
+    border-radius: 50%;
+}
+/* .eye:after { 
     position: absolute;
     width: 4px;
     height: 4px;
@@ -404,7 +412,7 @@ header{
     background: #000;
     border-radius: 50%;
     content: " ";
-  }
+  } */
 .logo-bottom{
     width: 100%;
     height: 16%;
